--- a/index.html
+++ b/index.html
@@ -56,6 +56,9 @@
         <object id="homeBackground" type="image/svg+xml"></object>
       </div>
     </section>
+
+    <div class="section-filler"></div>
+
     <section id="about">
       <!-- Background SVG -->
       <div class="svg-background-aboutme">
@@ -82,7 +85,7 @@
         <object id="foregroundSVG" data="assets/svg/animation-aboutme-foreground.svg" type="image/svg+xml"></object>
       </div>
     </section>
-    
+
 
     <section id="projects">
       <div class="svg-background">
@@ -136,6 +139,7 @@
       </div>
     </section>
 
+
     <section id="contact">
       <div class="svg-background">
         <object data="assets/svg/contact-background.svg" type="image/svg+xml"></object>
@@ -144,6 +148,7 @@
       <p>Interested in collaborating or discussing creative ideas? Send me an email, I'd love to hear from you! <br> Email : ilhambudiraharjo@gmail.com</p>
     </section>
   </main>
+
 
   <footer>
     <p>&copy; 2025 Ilham Budi Raharjo. All rights reserved.</p>
