--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
         <div class="project-card">
           <div class="card-content">
             <iframe width="720" height="450" src="https://www.youtube.com/embed/G1Pvo-zBJR4?si=U2_L8G1N7zZx30k5" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>         </div>
-          <img src="assets/svg/Card-ceo masterclass.svg" alt="frame" class="card-frame">
+          <img src="assets/svg/card-ceo masterclass.svg" alt="frame" class="card-frame">
         </div>       
         
         <!-- (Kamu bisa tambah card lagi dengan format serupa) -->
